--- a/src/components/PlayStats/PlayStats.css
+++ b/src/components/PlayStats/PlayStats.css
@@ -3,7 +3,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    padding: 0 1.5rem;
+    padding: 0 1.5rem 1.5rem;
 }
 .Svg-wrapper{
     display: flex;
