--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,6 +13,8 @@
     background-color: var(--bg-c-primary);
     position: relative;
     z-index: 3;
+    max-width: 2620px;
+    margin: 0 auto;
 }
 .Logo-h1{
     font-size: 2rem;
