--- a/src/components/MoviesLiLarge/MoviesLiLarge.css
+++ b/src/components/MoviesLiLarge/MoviesLiLarge.css
@@ -46,8 +46,8 @@
 }
 .MoviesLarge-paragraph{
     margin: .5rem 0 2rem;
-    font-size: .875rem;
     width: 60%;
+    filter: drop-shadow(0 .5rem .5rem rgba(0, 0, 0, 0.5));
 }
 @media(max-width:976px){
     .MoviesLarge-paragraph{
