--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@
     .DeleteFav-btn{
         opacity: 1;
         pointer-events: all;
+        z-index: 1;
     }
     .Small-btn:hover{
         background-color: var(--bg-c-secondary);
